add feedback to display the numbers being computed and add data attributes to the changed class for more accessibility

--- a/index.html
+++ b/index.html
@@ -13,26 +13,31 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="results-container">0</div>
+        <div class="results-container">
+            <div class="feedback"></div>
+            <div class="result">0</div>
+        </div>
         <div class="key-container">
             <div class="clear key">CLEAR</div>
             <div class="delete key">DELETE</div>
-            <div class="number key">7</div>
-            <div class="number key">8</div>
-            <div class="number key">9</div>
-            <div class="division key">÷</div>
-            <div class="number key">4</div>
-            <div class="number key">5</div>
-            <div class="number key">6</div>
-            <div class="multiplication key">x</div>
-            <div class="number key">1</div>
-            <div class="number key">2</div>
-            <div class="number key">3</div>
-            <div class="subtraction key">-</div>
-            <div class="dot key">.</div>
-            <div class="number key">0</div>
+
+            <div class="number key" data-key = '7'>7</div>
+            <div class="number key" data-key = '8'>8</div>
+            <div class="number key" data-key = '9'>9</div>
+            <div class="operator key" data-operator = '÷'>÷</div>
+            <div class="number key" data-key = '4'>4</div>
+            <div class="number key" data-key = '5'>5</div>
+            <div class="number key" data-key = '6'>6</div>
+            <div class="operator key" data-operator = 'x'>x</div>
+            <div class="number key" data-key = '1'>1</div>
+            <div class="number key" data-key = '2'>2</div>
+            <div class="number key" data-key = '3'>3</div>
+            <div class="operator key" data-operator = '-'>-</div>
+            <div class="number key" data-key = '.'>.</div>
+            <div class="number key" data-key = '0'>0</div>
+
             <div class="equals key">=</div>
-            <div class="addition key">+</div>
+            <div class="operator key" data-operator= '+'>+</div>
         </div>
     </div>
    
