add sign(+/-) key and double 0(00) key

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
             <div class="result">0</div>
         </div>
         <div class="key-container">
-            <div class="clear key">CLEAR</div>
-            <div class="delete key">DELETE</div>
+            <div class="sign key">+/-</div>
+            <div class="clear key">AC</div>
+            <div class="delete key">DEL</div>
 
             <div class="number key" data-key = '7'>7</div>
             <div class="number key" data-key = '8'>8</div>
@@ -35,6 +36,7 @@
             <div class="operator key" data-operator = '-'>-</div>
             <div class="number key" data-key = '.'>.</div>
             <div class="number key" data-key = '0'>0</div>
+            <div class="number key" data-key = '0'>00</div>
 
             <div class="equals key">=</div>
             <div class="operator key" data-operator= '+'>+</div>
