--- a/index.html
+++ b/index.html
@@ -18,28 +18,40 @@
             <div class="result">0</div>
         </div>
         <div class="key-container">
-            <div class="sign key">+/-</div>
-            <div class="clear key">AC</div>
-            <div class="delete key">DEL</div>
+            <div class="modifier-keys">
+                <div class="sign key">+/-</div>
+                <div class="clear key">AC</div>
+                <div class="delete key">DEL</div>
+            </div>
 
-            <div class="number key" data-key = '7'>7</div>
-            <div class="number key" data-key = '8'>8</div>
-            <div class="number key" data-key = '9'>9</div>
-            <div class="operator key" data-operator = '÷'>÷</div>
-            <div class="number key" data-key = '4'>4</div>
-            <div class="number key" data-key = '5'>5</div>
-            <div class="number key" data-key = '6'>6</div>
-            <div class="operator key" data-operator = 'x'>x</div>
-            <div class="number key" data-key = '1'>1</div>
-            <div class="number key" data-key = '2'>2</div>
-            <div class="number key" data-key = '3'>3</div>
-            <div class="operator key" data-operator = '-'>-</div>
-            <div class="number key" data-key = '.'>.</div>
-            <div class="number key" data-key = '0'>0</div>
-            <div class="number key" data-key = '0'>00</div>
+            <div class="group1">
+                <div class="number key" data-key = '1'>1</div>
+                <div class="number key" data-key = '4'>4</div>
+                <div class="number key" data-key = '7'>7</div>
+                <div class="number key" data-key = '.'>.</div>
+            </div>
+            
+            <div class="group2">
+                <div class="number key" data-key = '2'>2</div>
+                <div class="number key" data-key = '5'>5</div>
+                <div class="number key" data-key = '8'>8</div>
+                <div class="number key" data-key = '0'>0</div>
+            </div>
+            
+            <div class="group3">
+                <div class="number key" data-key = '3'>3</div>
+                <div class="number key" data-key = '6'>6</div>
+                <div class="number key" data-key = '9'>9</div>
+                <div class="number key" data-key = '0'>00</div>
+            </div>
 
-            <div class="equals key">=</div>
-            <div class="operator key" data-operator= '+'>+</div>
+            <div class="operators">
+                <div class="operator key" data-operator = '÷'>÷</div>
+                <div class="operator key" data-operator = 'x'>x</div>
+                <div class="operator key" data-operator = '-'>-</div>
+                <div class="operator key" data-operator= '+'>+</div>
+                <div class="equals key">=</div>
+            </div>
         </div>
     </div>
    
